# bluetooth-repeater

./: README.md  pyproject.toml  setup.cfg  setup.py
conf/: config.json.example
src/plasmoid/com.drakard.thermobeacon/: metadata.json
src/plasmoid/com.drakard.thermobeacon/contents/config/: config.qml  main.xml
src/plasmoid/com.drakard.thermobeacon/contents/js/: ColorLibrary.js  meta.js
src/plasmoid/com.drakard.thermobeacon/contents/ui/: main.qml
src/plasmoid/com.drakard.thermobeacon/contents/ui/config/: Appearance.qml  Network.qml
src/plasmoid/com.drakard.thermobeacon/contents/ui/lib/: BeaconSocket.qml  Circle.qml  ColorPicker.qml  ColorPickerIfYouCouldStopKirigamiFromKeepingTheButtonHighlighted.qml  FadingToolTip.qml
src/repeater/: receive.py  repeat.py
src/repeater/decoders/: BLEDecoder.py  ThermoBeacon.py
src/repeater/output/: Influx.py
tools/: deployPlasmoid.sh
tools/systemd/: blereceiver@.service  blerepeater@.service
