[metadata]
name = blerepeater
version = 0.1
author = Keith Drakard
author_email = <contact@drakard.com>
description = Bluetooth Repeater/Receiver
keywords = bluetooth, ble, network
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Environment :: No Input/Output (Daemon)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9


[options]
install_requires =
  bleak
  rpyc
  pyhumps
  schedule
  websockets
  
  
python_requires = >=3.9
package_dir =
  =src
packages = find:

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
  blerepeater = repeater.repeat:entry
  blereceiver = repeater.receive:entry
  
  
 
